--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@ body{
 .headline{
     margin-left: 600px;
     padding-top: 100px;
-    text-align: center;
+    text-align-last: right;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 30px;
     font-weight: bold;
