--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("bgKozhikode.jpg");
+    background-image: url("../images/bg.jpg");
     background-image:cover;
 }
 
