--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,13 @@
 body{
-    background-image: url("../images/bg.jpg");
+    background-image: url("https://github.com/Dinusha-P/Assignment_1_Kerala_Tourism/blob/main/images/bg.jpg");
     background-image:cover;
 }
 
 .headline{
-
-    text-align-last: right;
-   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    margin-left: 600px;
+    padding-top: 100px;
+    text-align-last: left;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 30px;
     font-weight: bold;
     color: bisque;
