--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("https://github.com/Dinusha-P/Assignment_1_Kerala_Tourism/blob/main/images/bg.jpg");
+    background-image: url("../images/bg.jpg");
     background-image:cover;
 }
 
